release 1.1.2-ea (2009-09)
- Cleaned up the throwing of exceptions by message body readers and writers.
  If a known checked, or documented runtime, exception is thrown when
  reading then a WebApplcationException is thrown with the cause. If the
  exception is related to reading then a 400 (Client error) status code is
  set, otherwise a 500 (Internal server error) status code is set.
  If a known checked, or documented runtime, exception is thrown when
  writing then a WebApplcationException is thrown with the cause and a 
  500 (Internal server error) status code is set.
- Fixed issue when a Content-Type request header is absent and resource methods
  consume (explicitly or by default) "*/*".
  When a Content-Type request header is absent resource methods that consume
  "*/*" take priority over other reosurce methods that consume other media
  types. Thus "*/*" means consuming any media type or no media type.
  See also com.sun.jersey.core.provider.EntityHolder to safely consume a
  request entity if present, otherwise declare that such an entity is not
  present.
- Support for explcitly adding a root resource class or root resource singleton
  by programatically declaring the root path, rather than using the @Path
  annotation. See ResourceConfig.getExplicitRootResources for more details.
- Support the throwing of WebApplicationException from within a singleton
  or stateless session bean method. This will only work with GF v3 build 58
  or greater.
- Fixed issue 302
  https://jersey.dev.java.net/issues/show_bug.cgi?id=302
  Allow a relative template name to be resolved to an absolute template name
  that is a flat name if the template cannot be resolved the path-based
  rule.
  The flat name is fully qualified class name plus a "." plus the template name.
  For example, given the resolving class com.foo.MyResource and the template
  name index the absolute name will be "com.foo.MyResource.index.jsp".
- Fixed issue 161